# ohtu-2022

viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: kauppa.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  login_resource.robot  register.robot
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
