[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Miko Keskimäki <miko.keskimaki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
jsonpickle = "~1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
